[package]
name = "choko"
version = "0.1.0"
edition = "2021"
authors = ["piroz"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.0"
aws_lambda_events = "0.8.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
